--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ body {
 
 .mobile-menu {
   display: none;
+  padding-top: 3rem;
   flex-direction: column;
   position: fixed;
   top: 0;
@@ -171,8 +172,8 @@ body {
 
 .mobile-menu li {
     padding-top: 1rem;
-  list-style: none;
-  width: 100%;
+    list-style: none;
+    width: 100%;
 }
 
 .mobile-menu li a {
@@ -318,6 +319,47 @@ h1 {
     color: black;
     transition: background-color 0.3s ease, color 0.3s ease;
     
+}
+
+.gallery {
+    padding: 3rem 4rem;
+}
+
+.gallery h2{
+    text-align: center;
+    margin-bottom: 2rem;
+    color: #108ACB;
+}
+
+.gallery h3 {
+    text-align: center;
+}
+
+.gallery-pics {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin: 3rem 0;
+}
+
+.gallery-img {
+    height: 500px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.gallery-videos {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 4rem;
+}
+
+video {
+    height: 500px;
+    width: 350px;
+    object-fit: cover;
 }
 
 .services {
@@ -466,7 +508,7 @@ h1 {
 }
 
 .testimonial-box p {
-    font-size: 20px;
+    font-size: 16px;
     line-height: 2rem;
     color: white;
 }
@@ -479,6 +521,10 @@ h1 {
     font-weight: 600;
 }
 
+.testimonials-section .scroll-btn {
+    display: none; /* hide scroll buttons on desktop */
+}
+
 .faq {
     padding: 3rem 5rem;
     background-color: #f9f9f9;
@@ -489,6 +535,10 @@ h1 {
     margin-bottom: 2rem;
     color: #108ACB;
 }
+
+.faq p{
+        margin-top: 1rem;
+    }
 
 details {
     margin-bottom: 1rem;
@@ -1091,6 +1141,27 @@ background: #00E9DF;
         padding: 5px 10px;
     }
 
+    .gallery-pics {
+        flex-direction: column;
+        gap: 1.5rem;
+        margin: 2rem 0;
+    }
+
+    .gallery-img {
+        width: 100%;
+        height: 400px;
+    }
+
+    .gallery-videos {
+        flex-direction: column;
+        gap: 1.5rem;
+        margin-top: 2rem;
+    }
+
+    video {
+        width: 100%;
+        height: 400px;
+    }
 
     .services {
         padding: 0 5rem;
@@ -1141,14 +1212,21 @@ background: #00E9DF;
 
     .testimonials-section {
         padding: 0 5rem;
-        height: 600px;
+        height: 750px;
+    }
+
+    .testimonials-section .scroll-btn {
+        display: block; /* show scroll buttons on mobile */
     }
 
     .testimonial-box {
+        display: flex;
+        flex-direction: column;
         flex: 0 0 300px;  /* match your card width in mobile */
         scroll-snap-align: center;       /* ✅ center each box on scroll */
         width: 300px;
-        height: 400px;
+        height: 520px;
+        justify-content: center;
     }
 
     .testimonials-section h2 {
@@ -1164,7 +1242,7 @@ background: #00E9DF;
         line-height: 2rem;
     }
     .testimonial-img {
-        height: 600px;
+        height: 750px;
     }
     .testimonial-row {
         margin-top: 3rem;
@@ -1185,6 +1263,7 @@ background: #00E9DF;
         font-size: 28px;
         line-height: 2.5rem;
     }
+
     details {
         padding: 0.8rem;
     }
