--- a/styles.css
+++ b/styles.css
@@ -637,7 +637,7 @@ details[open] summary::after {
 .head {
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 550px;
     align-items: center;
     justify-content: center;
     overflow: hidden;
@@ -646,9 +646,9 @@ details[open] summary::after {
 
 .head-img {
     width: 100%;
-    height: 500px;
+    height: 550px;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
     margin-bottom: 1rem;
     filter: brightness(0.4);
     z-index: -1;         /* keep it behind text */
